<resources>
    <string name="app_name">FinalProject</string>
    <string name="txtStudent">Student</string>
    <string name="txtTeacher">Teacher</string>
    <string name="txtEmail_addressL">Email Address:</string>
    <string name="txtPasswordL">Password:</string>
    <string name="not_a_member">Not A Member?</string>
    <string name="btnRegisterL">Register</string>
    <string name="btnLoginL">Login</string>
    <string name="hintEmail">Email Address</string>
    <string name="hintPass">Password</string>
    <string name="btnLoginW">Login</string>
    <string name="btnRegisterW">Register</string>
    <string name="btnExitW">Exit</string>
    <string name="welcome_to_the_survey_app">Welcome to the survey app</string>
    <string name="txtEmail_addressR">Email Address</string>
    <string name="txtPasswordR">Password</string>
    <string name="txtAlready_a_memberR">Already A Member?</string>
    <string name="txtFullnameR">Fullname</string>
    <string name="btnRegisterR">Register</string>
    <string name="btnLoginR">Login</string>
    <string name="txtAdminKeyR">Admin Key(If Teacher)</string>
    <string name="btnPrevious1">Previous</string>
    <string name="btnNext1">Next</string>
    <string name="isTeacherR">Teacher</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="surveyIcon">surveyIcon</string>
    <string name="splash">surveyIcon</string>
    <string name="registrationIcon">registrationIcon</string>
    <string name="published_surveys_s">Published Surveys</string>
    <string name="completed_surveys_s">Completed Surveys</string>
    <string name="btn_logout_s">Logout</string>
    <string name="surveyIconS">surveyIconS</string>
    <string name="Select_Department">Select Department</string>
    <string name="Open_Drawer">Open</string>
    <string name="Close_Drawer">Close</string>
    <string name="surveyApp">Survey App</string>
    <string name="maker">Made By P2612742</string>
    <string name="logoutDrawer">Logout</string>
    <string name="loginDrawer">Login</string>
    <string name="profileDrawer">Profile</string>
    <string name="homeDrawer">Home</string>
    <string name="all_done">All done</string>
    <string name="click_on_submit_answers">Click on submit to submit your answers or go back</string>
    <string name="submit_all">Submit</string>
    <string name="add_survey">Add Survey</string>
    <string name="all_surveys">All Surveys</string>
    <string name="startDate">StartDate:</string>
    <string name="endDate">EndDate:</string>
    <string name="survey_info">Survey:%1$s\nStartDate:%2$s\nEndDate:%3$s</string>
    <string name="add_questions">Add questions</string>
    <string name="publish">Publish</string>
    <string name="end_date_hint">EndDate: dd/MM/yyyy</string>
    <string name="start_date_hint">StartDate: dd/MM/yyyy</string>
    <string name="survey_title_hint">Survey Title</string>
    <string name="add_a_new_survey">Add A New Survey</string>
    <string name="user_info">Hello %1$s !</string>
    <string name="filter">Filter:</string>
    <string name="participants">Participants: %1$d</string>
    <string name="add_edit_questions">Add/Edit Questions</string>
    <string name="back">Back</string>
    <string name="Update_Survey">Update Survey</string>
    <string name="btnUpdate">Update</string>
    <string name="barchart_stats">BARCHART STATS</string>
    <string name="piechart_stats">PIECHART STATS</string>
    <string name="hint_add_a_new_question">Add a new question</string>
    <string name="submit_your_questions_or_go_back_to_change">Submit your questions or go back to change</string>
    <string name="add_10_questions">Add 10 questions</string>
    <string name="answer_table">Answer Table</string>
    <string name="question_num">Question NUM</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="disagree">Disagree</string>
    <string name="neither">Neither</string>
    <string name="agree">Agree</string>
    <string name="strongly_agree">Strongly Agree</string>
    <string name="slide_left"><![CDATA[Slide Left <<<]]></string>
</resources>