<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeDrawer"
            android:title="@string/homeDrawer"
            android:icon="@drawable/ic_baseline_home_24"/>
    </group>

    <group
        android:checkableBehavior="single">

        <item
            android:title="@string/profileDrawer">
            <menu>

                <item
                    android:id="@+id/loginDrawer"
                    android:title="@string/loginDrawer"
                    android:icon="@drawable/ic_baseline_login_24"/>

                <item
                    android:id="@+id/logoutDrawer"
                    android:title="@string/logoutDrawer"
                    android:icon="@drawable/ic_baseline_logout_24"/>
            </menu>
        </item>
    </group>

</menu>