<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_fragment_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/answer_table"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_survey_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fragment_table"
        tools:ignore="SpeakableTextPresentCheck" />

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_survey_table">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:showDividers="middle"
            android:background="@color/seed">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/question_num"
                android:textStyle="bold"
                android:padding="5sp"
                android:textSize="11sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/strongly_disagree"
                android:textStyle="bold"
                android:padding="5sp"
                android:textSize="11sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/disagree"
                android:textStyle="bold"
                android:padding="5sp"
                android:textSize="11sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/neither"
                android:textStyle="bold"
                android:padding="5sp"
                android:textSize="11sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textStyle="bold"
                android:padding="5sp"
                android:textSize="11sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/strongly_agree"
                android:textStyle="bold"
                android:padding="5sp"
                android:textSize="11sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>